--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/webapp?enabledTLSProtocols=TLSv1.2
+spring.datasource.url=jdbc:mysql://localhost:3306/webapp
 spring.datasource.username=root
 spring.datasource.password=tyw199639
 interactiveClient=true&autoReconnectForPools=true
