--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/webapp
-spring.datasource.username=root
-spring.datasource.password=tyw199639
+spring.datasource.url=jdbc:mysql://sql9.freesqldatabase.com:3306/sql9606153
+spring.datasource.username=sql9606153
+spring.datasource.password=kcsdkulA5a
 interactiveClient=true&autoReconnectForPools=true
 
 server.port=8081
