--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/webapp
-spring.datasource.username=root
-spring.datasource.password=tyw199639
+spring.datasource.url=jdbc:mysql://${DB_HOSTNAME}:3306/mydb
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.port=8081
 
