--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,21 +32,17 @@ jobs:
       - name: Build Artifact
         run: mvn clean install
           cd target/
-          ls -al
-          cd ../
-          pwd
-          ls -al
 
       - name: Zip Artifact
         run: echo "current build number is "
           pwd
           mkdir -p codedeploy_artifact
           cd codedeploy_artifact
-          cp *.xml .
-          cp CSYE6225_WEBAPP/target/webapp-0.0.1-SNAPSHOT.jar .
-          cp CSYE6225_WEBAPP/src/main/resources/*.properties .
+          cp ../pom.xml .
+          cp ../target/webapp-0.0.1-SNAPSHOT.jar .
+          cp ../src/main/resources/*.properties .
           zip -r csye6225-web-app.zip .
-          rm *.yml *.sh *.properties *.jar
+          rm *.xml *.properties *.jar
           ls -al
           pwd
           cd ..
