--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -57,7 +57,7 @@ jobs:
         run: |
           cd aws-infra-main
           cd packer
-          packer build
+          packer build ami.json
           cd ..
           terraform init
           terraform apply
