--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -60,6 +60,7 @@ jobs:
 
       - name: Load SSH key
         run: |
+          sudo apt-get install libcrypto
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PUB}}" > ~/.ssh/ec2.pub
           chmod 600 ~/.ssh/ec2.pub
