--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,6 +5,10 @@
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
+#          cd aws-infra-main
+#          cd packer
+#          packer build -var "aws_access_key=${aws_access_key_dev}" -var "aws_secret_key=${aws_secret_key_dev}" ami.json
+#          cd ..
 
 name: Java CI with Maven
 
@@ -62,10 +66,7 @@ jobs:
 
       - name: Terraform Apply
         run: |
-          cd aws-infra-main
-          cd packer 
-          packer build -var "aws_access_key=${aws_access_key_dev}" -var "aws_secret_key=${aws_secret_key_dev}" ami.json 
-          cd ..
+
           terraform init
           terraform apply -var "aws_access_key=${aws_access_key_demo}" -var "aws_secret_key=${aws_secret_key_demo}" -var "public_key=${ssh_public}"  -var "private_key=${ssh_private}"
 
