--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,33 +29,33 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: "11"
-          distribution: "temurin"
-          cache: maven
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-      - name: Build Artifact
-        run: |
-          mvn clean install
-          cd target
+      # - name: Set up JDK 11
+      #   uses: actions/setup-java@v3
+      #   with:
+      #     java-version: "11"
+      #     distribution: "temurin"
+      #     cache: maven
+      # - name: Build with Maven
+      #   run: mvn -B package --file pom.xml
+      # - name: Build Artifact
+      #   run: |
+      #     mvn clean install
+      #     cd target
 
-      - name: Zip Artifact
-        run: echo "current build number is "
-          pwd
-          mkdir -p codedeploy_artifact
-          cd codedeploy_artifact
-          cp ../pom.xml .
-          cp ../target/webapp-0.0.1-SNAPSHOT.jar .
-          cp ../src/main/resources/*.properties .
-          zip -r csye6225-web-app.zip .
-          rm *.xml *.properties *.jar
-          ls -al
-          pwd
-          cd ..
-          pwd
+      # - name: Zip Artifact
+      #   run: echo "current build number is "
+      #     pwd
+      #     mkdir -p codedeploy_artifact
+      #     cd codedeploy_artifact
+      #     cp ../pom.xml .
+      #     cp ../target/webapp-0.0.1-SNAPSHOT.jar .
+      #     cp ../src/main/resources/*.properties .
+      #     zip -r csye6225-web-app.zip .
+      #     rm *.xml *.properties *.jar
+      #     ls -al
+      #     pwd
+      #     cd ..
+      #     pwd
 
       - name: Install awscli
         run: |
