--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -74,10 +74,13 @@ jobs:
       - name: Add SSH key
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE }}
+          SSH_PUBLIC_KEY: ${{ secrets.SSH_PUB}}
         run: |
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          echo "$SSH_PUBLIC_KEY" > ~/.ssh/id_rsa.pub
           chmod 600 ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa.pub
 
       - name: Terraform Apply
         env:
