--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,33 +29,33 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: "11"
-          distribution: "temurin"
-          cache: maven
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-      - name: Build Artifact
-        run: |
-          mvn clean install
-          cd target
+      # - name: Set up JDK 11
+      #   uses: actions/setup-java@v3
+      #   with:
+      #     java-version: "11"
+      #     distribution: "temurin"
+      #     cache: maven
+      # - name: Build with Maven
+      #   run: mvn -B package --file pom.xml
+      # - name: Build Artifact
+      #   run: |
+      #     mvn clean install
+      #     cd target
 
-      - name: Zip Artifact
-        run: echo "current build number is "
-          pwd
-          mkdir -p codedeploy_artifact
-          cd codedeploy_artifact
-          cp ../pom.xml .
-          cp ../target/webapp-0.0.1-SNAPSHOT.jar .
-          cp ../src/main/resources/*.properties .
-          zip -r csye6225-web-app.zip .
-          rm *.xml *.properties *.jar
-          ls -al
-          pwd
-          cd ..
-          pwd
+      # - name: Zip Artifact
+      #   run: echo "current build number is "
+      #     pwd
+      #     mkdir -p codedeploy_artifact
+      #     cd codedeploy_artifact
+      #     cp ../pom.xml .
+      #     cp ../target/webapp-0.0.1-SNAPSHOT.jar .
+      #     cp ../src/main/resources/*.properties .
+      #     zip -r csye6225-web-app.zip .
+      #     rm *.xml *.properties *.jar
+      #     ls -al
+      #     pwd
+      #     cd ..
+      #     pwd
 
       - name: Install awscli
         run: |
@@ -94,12 +94,12 @@ jobs:
       - name: Get Infrastructure Outputs
         id: outputs
         run: |
-          echo "IP=${{ terraform output instance_public_ip }}" >> $GITHUB_ENV
+          echo "::set-output name=ip::$(terraform output instance_public_ip)"
 
       - name: Copy Java ZIP file to EC2 instance
         run: |
           IP=$(echo ${{ steps.outputs.outputs.ip }})
-          scp -i ~/.ssh/id_rsa codedeploy_artifact/csye6225-web-app.zip user@$IP:/home/tomcat/
+          scp -i ~/.ssh/id_rsa codedeploy_artifact/csye6225-web-app.zip user@$IP:/home/tomcat/csye6225-web-app.zip
 
       - name: Extract Java ZIP file on EC2 instance
         run: ssh -i ${{ secrets.SSH_PRIVATE}} ec2@${{ steps.outputs.outputs.ip }} "unzip /home/tomcat/csye6225-web-app.zip -d /opt/tomcat/webapps/"
