--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -94,17 +94,16 @@ jobs:
       - name: Get Infrastructure Outputs
         id: outputs
         run: |
-          echo "::set-output name=ip::$(terraform output instance_public_ip)"
+          echo "ip=${{ steps.outputs.outputs.instance_public_ip }}" >> $GITHUB_ENV
 
       - name: Copy Java ZIP file to EC2 instance
         run: |
-          IP=${{ steps.outputs.outputs.ip }}
-          scp -i ~/.ssh/id_rsa codedeploy_artifact/csye6225-web-app.zip ec2-user@${IP}:/home/tomcat/csye6225-web-app.zip
+          scp -i ~/.ssh/id_rsa codedeploy_artifact/csye6225-web-app.zip ec2-user@${{env.ip}}:/home/tomcat/csye6225-web-app.zip
 
       - name: Extract Java ZIP file on EC2 instance
         run: |
-          ssh -i ~/.ssh/id_rsa ec2-user@${IP} "unzip /home/tomcat/csye6225-web-app.zip -d /opt/tomcat/webapps/"
+          ssh -i ~/.ssh/id_rsa ec2-user@${{env.ip}} "unzip /home/tomcat/csye6225-web-app.zip -d /opt/tomcat/webapps/"
 
       - name: Start application on EC2 using screen
         run: |
-          ssh -i ~/.ssh/id_rsa ec2-user@${IP} "screen -dmS csye6225-web-app java -jar /opt/tomcat/webapps/webapp-0.0.1-SNAPSHOT.jar"
+          ssh -i ~/.ssh/id_rsa ec2-user@${{env.ip}} "screen -dmS csye6225-web-app java -jar /opt/tomcat/webapps/webapp-0.0.1-SNAPSHOT.jar"
