--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -86,7 +86,7 @@ jobs:
         run: |
           cd aws-infra-main
           terraform init
-          terraform apply -auto-approve -var "aws_access_key=${aws_access_key_demo}" -var "aws_secret_key=${aws_secret_key_demo}" -var "public_key=${ssh_public}"  -var "private_key=${ssh_private}"
+          terraform apply -auto-approve -var "aws_access_key=${aws_access_key_demo}" -var "aws_secret_key=${aws_secret_key_demo}" 
           INSTANCE_PUBLIC_IP=$(terraform output public_ip)
           echo "ip=${INSTANCE_PUBLIC_IP}" >> $GITHUB_ENV
 
