--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -77,17 +77,13 @@ jobs:
           SSH_PUBLIC_KEY: ${{ secrets.SSH_PUB}}
         run: |
           mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          echo "$SSH_PUBLIC_KEY" > ~/.ssh/id_rsa.pub
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/ec2
           chmod 600 ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa.pub
+
       - name: Terraform Apply
         id: terraform-apply
         run: |
           cd aws-infra-main
-          cd packer
-          packer build -var "aws_access_key=${aws_access_key_dev}" -var "aws_secret_key=${aws_secret_key_dev}" ami.json
-          cd ..
           terraform init
           terraform apply -auto-approve -var "aws_access_key=${aws_access_key_demo}" -var "aws_secret_key=${aws_secret_key_demo}" 
           INSTANCE_PUBLIC_IP=$(terraform output public_ip)
@@ -95,12 +91,12 @@ jobs:
 
       - name: Copy Java ZIP file to EC2 instance
         run: |
-          scp -i ~/.ssh/id_rsa codedeploy_artifact/csye6225-web-app.zip ec2-user@${{ env.ip  }}:/home/tomcat/csye6225-web-app.zip
+          scp -i ~/.ssh/ec2 codedeploy_artifact/csye6225-web-app.zip ec2-user@${{ env.ip  }}:/home/tomcat/csye6225-web-app.zip
 
       - name: Extract Java ZIP file on EC2 instance
         run: |
-          ssh -i ~/.ssh/id_rsa ec2-user@${{ env.ip }} "unzip /home/tomcat/csye6225-web-app.zip -d /opt/tomcat/webapps/"
+          ssh -i ~/.ssh/ec2 ec2-user@${{ env.ip }} "unzip /home/tomcat/csye6225-web-app.zip -d /opt/tomcat/webapps/"
 
       - name: Start application on EC2 using screen
         run: |
-          ssh -i ~/.ssh/id_rsa ec2-user@${{ env.ip  }} "screen -dmS csye6225-web-app java -jar /opt/tomcat/webapps/webapp-0.0.1-SNAPSHOT.jar"
+          ssh -i ~/.ssh/ec2 ec2-user@${{ env.ip  }} "screen -dmS csye6225-web-app java -jar /opt/tomcat/webapps/webapp-0.0.1-SNAPSHOT.jar"
