--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,13 @@
     <artifactId>modelmapper</artifactId>
     <version>3.1.1</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
+<dependency>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-java-sdk-s3</artifactId>
+    <version>1.12.450</version>
+</dependency>
+
 
     </dependencies>
 
