--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -84,6 +84,9 @@ jobs:
         id: terraform-apply
         run: |
           cd aws-infra-main
+          cd packer
+          packer build -var "aws_access_key=${aws_access_key_dev}" -var "aws_secret_key=${aws_secret_key_dev}" ami.json
+          cd ..
           terraform init
           terraform destroy -auto-approve -var "aws_access_key=${aws_access_key_demo}" -var "aws_secret_key=${aws_secret_key_demo}" 
           terraform apply -auto-approve -var "aws_access_key=${aws_access_key_demo}" -var "aws_secret_key=${aws_secret_key_demo}" 
